grafana/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: grafana-svc
            servicePort: 3000
            #        - path: /banana
            #          backend:
            #            serviceName: banana-service
            #            servicePort: 5678
